# contextaudit

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: architecture.md
examples/adapters/langchain/: documents.jsonl
examples/adapters/llamaindex/: nodes.json
examples/adapters/markdown/: refunds.md  web-attack.md
examples/ci/: README.md  fail-policy.json  malformed-policy.json  pass-policy.json  suppressions.json
examples/extensions/: custom-context.pipe  custom_loader.py
examples/github-actions/: contextaudit-reusable.yml
examples/support-pack/: answer-problem.json  answer-supported.json  context.jsonl  policy.json  suite.json
scripts/: quality.py
src/contextaudit/: __init__.py  __main__.py  answer_audit.py  cli.py  evaluation.py  extensions.py  io.py  models.py  report.py  scanner.py  suppressions.py
tests/: test_answer_audit.py  test_ci_examples.py  test_cli.py  test_evaluation.py  test_extensions.py  test_io.py  test_report.py  test_scanner.py
